--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             padding: 10px 20px;
             font-size: 1em;
             color: white;
-            background-color: #ff4081;
+            background-color: #fdd300;
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s;
