--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         /* 滑鼠懸停時改變按鈕顏色 */
         .close-button:hover {
-            background-color: #000000;
+            background-color: #fd9800;
         }
     </style>
 </head>
