--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         .footer {
             width: 100%;
             height: 15vh;
-            background-color: purple;
+            background-color: #e90080;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -72,7 +72,7 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            color: purple;
+            color: #e90080;
             font-size: 3em;
             white-space: pre-line;
         }
